--- a/shoutcast.conf
+++ b/shoutcast.conf
@@ -10,7 +10,6 @@ w3clog=/var/log/shoutcast/sc_w3c.log
 banfile=/etc/shoutcast/sc_serv.ban
 ripfile=/etc/shoutcast/sc_serv.rip
 
-
 ; for testing we will make the server only work locally
 ; (i.e. localhost / 127.0.0.1) though if this is left out
 ; or set to publicserver=always then we attempt to make a
@@ -18,23 +17,20 @@ ripfile=/etc/shoutcast/sc_serv.rip
 ; in a 'streamauthhash' value for any public streams made
 publicserver=never
 
-
 ; max number of listeners
-maxusers=10
-
+maxusers=100000
 
 ; if you're wanting to use a different port to use for any
 ; connections then you can use this option e.g. to use 80
 ; otherwise port 8000 is used as the default to listen on.
 ;portbase=80
-portbase=10128
-
+portbase=10001
 
 ; password used by sc_trans or the Winamp dsp plug-in
 ; NOTE: remember to change this to something else
-password=testing
+password=jdmixer
 
 
 ; password used for accessing the administation pages
 ; NOTE: remember to change this to something else
-adminpassword=testingtoo
+adminpassword=jdmixer
